<resources>
    <string name="app_name" translatable="false">卷包智慧微平台</string>
    <string name="app_title" translatable="false">快乐工作，健康生活！</string>
    <!--menu-->
    <string name="title" translatable="false">卷包智慧微平台</string>

    <string name="photo" translatable="false">图片</string>

    <!-- 共享过度动画 -->
    <string name="transition_photos" translatable="false">transition_animation_news_photos</string>

    <string name="home" translatable="false">首页</string>
    <!-- 新闻 -->
    <string name="photo_collections" translatable="false">图集：%1$s</string>
    <string name="news_from" translatable="false">%1$s %2$s</string>
    <string name="photo_detail_title" translatable="false">%1$d/%2$d　%3$s</string>
    <string name="web_view" translatable="false">WebView</string>
    <string name="photo_news" translatable="false">图片新闻</string>
    <string name="browser" translatable="false">用浏览器打开</string>
    <string name="share" translatable="false">分享</string>
    <string name="share_contents" translatable="false">来自「卷包智慧微平台」的分享：%1$s %2$s</string>

    <!-- 新闻频道 -->
    <string name="channel_explain" translatable="false">点击可增删/长按并拖拽可排序</string>
    <string name="my_channel" translatable="false">我的频道</string>
    <string name="more_channel" translatable="false">更多频道</string>
    <string name="channel_manage" translatable="false">频道管理</string>
    <!-- 管控 -->
    <string name="control" translatable="false">管控</string>
    <string name="qualityindex" translatable="false">质量指标</string>
    <string name="efficiencyindex" translatable="false">效率指标</string>
    <string name="comprehenindex" translatable="false">综合指标</string>
    <string name="repairguide" translatable="false">维修建议</string>
    <string name="processpredict" translatable="false">进度预测</string>

    <string name="weiguan" translatable="false">微视</string>
    <string name="shichuang" translatable="false">视窗</string>

    <!-- 图片 -->
    <string name="girl" translatable="false">妹纸</string>
    <!--视频-->
    <string name="video_play_times" translatable="false">%1$s次播放</string>

    <!--动态 -->
    <string name="care_about_wechat" translatable="false">更多精彩要闻，请及时查看卷包智慧微平台！</string>

    <!-- 管控 -->
    <string name="control_yield_index" translatable="false">产量指标</string>
    <string name="control_cost_index" translatable="false">消耗指标</string>
    <string name="control_quality_feedback" translatable="false">产品追溯</string>
    <string name="control_title_feedback" translatable="false">请输入要查询的钢印号</string>
    <string name="control_searchbutton_feedback" translatable="false">查  询</string>
    <string name="control_number_feedback" translatable="false">钢印号:</string>
    <string name="control_hint_feedback" translatable="false">输入产品上的钢印标识，例如:687B120</string>


    <item name="content_index" type="id">content_index</item>
    <item name="group_index" type="id">group_index</item>


    <string name="x_label_month" translatable="false">（月份）</string>
    <string name="y_label_index" translatable="false">（数量）</string>
    <string name="x_label_yieldindex" translatable="false">日期</string>
    <string name="y_label_yieldindex" translatable="false">产量（箱）</string>
    <string name="x_label_qualityindex" translatable="false">日期</string>
    <string name="y_label_qualityindex" translatable="false">质量得分</string>
    <string name="x_label_costindex" translatable="false">日期</string>
    <string name="y_label_costindex" translatable="false">消耗得分</string>
    <string name="x_label_efficiencyindex" translatable="false">日期</string>
    <string name="y_label_efficiencyindex" translatable="false">运行效率（%）</string>

    <string name="login_success" translatable="false">登陆成功</string>
    <string name="login" translatable="false">登陆</string>
    <string name="Username" translatable="false">用户名</string>
    <string name="Password" translatable="false">密码</string>
    <string name="forgot_your_password" translatable="false">找回密码？</string>
    <string name="repeat_password" translatable="false">确认密码</string>
    <string name="next" translatable="false">下一步</string>
    <string name="register" translatable="false">注册账号</string>
    <string name="wrong_usn_pwd" translatable="false">用户名或密码错误！</string>
    <string name="wrong_network" translatable="false">网络出错！</string>

</resources>
