
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/action_bar"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/control_quality_feedback" />
    <TextView
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="60px"
        android:text="@string/control_title_feedback"/>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50px"
            android:text="@string/control_number_feedback"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/control_number_feedback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40px"
            android:hint="@string/control_hint_feedback"/>
    </LinearLayout>
    <Button
        android:id="@+id/control_search_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textSize="55px"
        android:text="@string/control_searchbutton_feedback"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>
  

</LinearLayout>
